[gd_scene load_steps=24 format=2]

[ext_resource path="res://characters/enemies/slime/textures/slime_animations.png" type="Texture" id=1]
[ext_resource path="res://characters/character/Character.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/character/states/Hurtstate.gd" type="Script" id=3]
[ext_resource path="res://characters/character/states/jump/FallState.gd" type="Script" id=4]
[ext_resource path="res://characters/character/states/DeathState.gd" type="Script" id=5]
[ext_resource path="res://characters/character/ai/general/RoamAI.gd" type="Script" id=6]
[ext_resource path="res://characters/character/ai/base/SearchAI.gd" type="Script" id=7]
[ext_resource path="res://characters/character/input/AIController.gd" type="Script" id=8]
[ext_resource path="res://characters/character/states/move/MoveState.gd" type="Script" id=9]
[ext_resource path="res://characters/character/states/jump/JumpState.gd" type="Script" id=10]
[ext_resource path="res://characters/character/ai/general/IdleAI.gd" type="Script" id=11]
[ext_resource path="res://characters/character/states/IdleState.gd" type="Script" id=12]
[ext_resource path="res://characters/enemies/slime/Slime.gd" type="Script" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.8226, 16.8791 )

[sub_resource type="Animation" id=2]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 40, 46 ]
}

[sub_resource type="Animation" id=11]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 24, 30 ]
}

[sub_resource type="Animation" id=12]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.62 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 30, 33 ]
}

[sub_resource type="Animation" id=13]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.84 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 5 ]
}

[sub_resource type="Animation" id=14]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 20, 23 ]
}

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 23.3241, 17.3919 )

[sub_resource type="RayShape2D" id=15]
length = 46.6239

[sub_resource type="RayShape2D" id=16]
length = 29.922

[sub_resource type="CircleShape2D" id=9]
radius = 170.0

[node name="Slime" instance=ExtResource( 2 )]
script = ExtResource( 13 )
max_health = 2

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 1 )
offset = Vector2( 0, -16 )
hframes = 10
vframes = 5
frame = 40

[node name="CollisionShape2D" parent="." index="1"]
visible = false
position = Vector2( -0.913498, -17.0012 )
shape = SubResource( 1 )

[node name="AnimationPlayer" parent="." index="2"]
anims/death = SubResource( 2 )
anims/fall = SubResource( 11 )
anims/hurt = SubResource( 12 )
anims/idle = SubResource( 13 )
anims/jump = SubResource( 14 )

[node name="InputController" parent="." index="3"]
script = ExtResource( 8 )

[node name="IdleAI" type="Node" parent="InputController" index="0"]
script = ExtResource( 11 )
follow_state_path = NodePath("")
roam_state_path = NodePath("../SearchAI/RoamAI")
idling_max_time = 2

[node name="SearchAI" type="Node" parent="InputController" index="1"]
script = ExtResource( 7 )
follow_state_path = NodePath("")

[node name="RoamAI" type="Node" parent="InputController/SearchAI" index="0"]
script = ExtResource( 6 )
edge_collider_path = NodePath("../../../EdgeCollider")
wall_collider_path = NodePath("../../../WallCollider")
perception_path = NodePath("../../../Perception")
follow_state_path = NodePath("")
idle_state_path = NodePath("../../IdleAI")

[node name="IdleState" type="Node" parent="StateMachine" index="0"]
script = ExtResource( 12 )
host_path = NodePath("../..")
animation_name = "idle"
move_speed = 0.0
move_damping = 0.8
attack_animations = [ "idle_attack1", "idle_attack2" ]
dash_state_path = NodePath("")

[node name="Move" type="Node" parent="StateMachine" index="1"]

[node name="MoveState" type="Node" parent="StateMachine/Move" index="0"]
script = ExtResource( 9 )
move_speed = 25.0
move_damping = 0.8
attack_animations = [ "run_attack1", "run_attack2" ]
attack_hitbox_path = NodePath("../../../Colliders/AttackHitbox")
jump_state_path = NodePath("")
dash_state_path = NodePath("")

[node name="DeathState" type="Node" parent="StateMachine" index="2"]
script = ExtResource( 5 )
host_path = NodePath("../..")
animation_name = "death"
despawnable = true
collision_layer = 1
collision_mask = 0

[node name="HurtState" type="Node" parent="StateMachine" index="3"]
script = ExtResource( 3 )
host_path = NodePath("../..")
animation_name = "hurt"
move_speed = 80.0

[node name="Jump" type="Node" parent="StateMachine" index="4"]

[node name="FallState" type="Node" parent="StateMachine/Jump" index="0"]
script = ExtResource( 4 )
animation_name = "fall"
move_speed = 90.0
move_damping = 0.8
attack_animations = [ "fall_attack1", "fall_attack2" ]
attack_hitbox_path = NodePath("../../../Colliders/AttackHitbox")
jump_state_path = NodePath("")
wall_jump_state_path = NodePath("")

[node name="JumpState" type="Node" parent="StateMachine/Jump" index="1"]
script = ExtResource( 10 )
animation_name = "jump"
move_speed = 15.0
move_damping = 0.8
attack_animations = [ "jump_attack1", "jump_attack2" ]
attack_hitbox_path = NodePath("../../../Colliders/AttackHitbox")
max_jump_height = 90.0
min_jump_height = 15.0

[node name="AttackCollider" type="Area2D" parent="." index="5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackCollider" index="0"]
position = Vector2( 0, -18.02 )
shape = SubResource( 10 )

[node name="Colliders" parent="." index="6"]
visible = false
position = Vector2( 0, -15 )

[node name="EdgeCollider" type="Area2D" parent="." index="7"]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EdgeCollider" index="0"]
position = Vector2( 0, -32.8949 )
rotation = -0.785398
shape = SubResource( 15 )

[node name="WallCollider" type="Area2D" parent="." index="8"]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallCollider" index="0"]
position = Vector2( 0, -18.133 )
rotation = -1.5708
shape = SubResource( 16 )

[node name="Perception" type="Area2D" parent="." index="9"]
visible = false
position = Vector2( 0, -17 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Perception" index="0"]
position = Vector2( 0.374573, 0 )
shape = SubResource( 9 )
